--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,80 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    background: linear-gradient(100deg, #574a56, #7e7988);
+  
 }
 
-.App-link {
-  color: #61dafb;
+div.wrapper {
+  max-width: 700px;
+  width: 100%;
+  background: #fff;
+  padding: 25px 30px ;
+  border-radius: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+
+.input-box .details{
+  display: block;
+  font-weight: 500;
+  margin-bottom: 5px;
+}
+
+.input-box input{
+  height: 45px;
+  width: 100%;
+  outline: none;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  padding-left: 15px;
+  font-size: 16px;
+  border-bottom-width: 2px;
+  transition: all 0.3s ease;
+}
+
+button {
+  background: #e9c5e7;
+  height: 45px;
+  width: 100%;
+  border-radius: 12px;
+  font-size: 25px;
+  pointer-events: all;
+  
+}
+.rahul {
+  height: 45px;
+  width: 100%;
+  background: #0f834d;
+  border-radius: 12px;
+  font-size: 25px;
+}
+
+.error {
+  font-size: 15px;
+  width: 100%;
+  color: red;
+}
+
+.wala {
+  
+  background-color: #0f834d;
+  color: #fff;
+  height: 45px;
+  width: 100%;
+  outline: none;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  padding-left: 15px;
+  font-size: 16px;
+  border-bottom-width: 2px;
+  transition: all 0.3s ease;
 }
